fix : spacing

--- a/src/components/Careers/CareersJoinUs/index.scss
+++ b/src/components/Careers/CareersJoinUs/index.scss
@@ -31,13 +31,21 @@
   &__values-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 60px;
+    grid-gap: 40px;
+    max-width: 1130px !important;
+    margin-right: auto;
+    margin-left: auto;
 
     @include mobile {
       grid-template-columns: 1fr;
     }
 
     .__heading {
+      padding-top: 74px;
+
+      @include mobile {
+        padding-top: 0;
+      }
       h2 {
         line-height: 1.3;
         font-size: 37px;
@@ -52,12 +60,12 @@
     .value {
       background: #ffffff;
       box-shadow: 0px 3px 40px rgba(0, 0, 0, 0.02);
-      border-radius: 16px;
       padding: 48px;
-      padding-bottom: 91px;
+      padding-bottom: 67px;
 
       @include mobile {
-        padding: 32px;
+        padding: 30px;
+        padding-bottom: 67px;
       }
 
       svg {
@@ -74,9 +82,7 @@
       .description {
         font-size: 16px;
         line-height: 1.75;
-        @include mobile {
-          font-size: 14px;
-        }
+        font-size: 14px;
       }
     }
   }
