--- a/src/components/Home/HomeCompanies/index.scss
+++ b/src/components/Home/HomeCompanies/index.scss
@@ -1,8 +1,8 @@
 @import "../../../styles/mixins";
 
 .home-companies {
-  padding-top: 130px;
-  padding-bottom: 130px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 
   .image-text-holder {
     .image-holder {
@@ -11,6 +11,9 @@
       margin-right: auto;
       background: var(--black);
       border-radius: 8px;
+
+      background-image: url("https://images.unsplash.com/photo-1532635241-17e820acc59f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80");
+      background-size: cover;
 
       @include mobile {
         margin-right: 4px;
@@ -35,7 +38,7 @@
     }
   }
   .company-logos {
-    margin-top: 130px;
+    margin-top: 80px;
     box-shadow: 0px 10px 25px rgba(151, 143, 175, 0.08);
     border-radius: 8px;
     padding: 28px 30px;
