--- a/src/components/Home/HomeHelp/index.scss
+++ b/src/components/Home/HomeHelp/index.scss
@@ -1,6 +1,5 @@
 .home-help {
-  padding-top: 130px;
-  padding-bottom: 47px;
+  padding-top: 80px;
 
   h1 {
     line-height: 1.52;
