--- a/src/components/Home/HomeValues/index.scss
+++ b/src/components/Home/HomeValues/index.scss
@@ -1,15 +1,16 @@
 @import "../../../styles/mixins";
 
 .home-values {
-  padding-top: 136px;
-  padding-bottom: 136px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   background: var(--black);
   color: #fff;
 
   &__grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 60px;
+    grid-gap: 40px;
+    max-width: 1130px !important;
 
     @include mobile {
       grid-template-columns: 1fr;
@@ -20,6 +21,12 @@
     }
 
     .heading {
+      padding-top: 74px;
+
+      @include mobile {
+        padding-top: 0;
+      }
+
       p {
         line-height: 1.78;
         margin-top: 32px;
@@ -48,7 +55,6 @@
         font-size: 14px;
         line-height: 1.81;
         margin-top: 24px;
-        max-width: 257px;
       }
     }
   }
