--- a/src/components/Other/TheNavBar/index.scss
+++ b/src/components/Other/TheNavBar/index.scss
@@ -9,6 +9,7 @@
   color: #fff;
   padding-bottom: 50px;
   padding-top: 50px;
+  transition: 0.2s ease;
 
   &[data-is-reduced="true"] {
     background: #fff;
